fix(apps/hub):    1. Fixed CSS Configuration Version Mismatch:        - Identified that Ritual_React/apps/hub had mismatched versions (@tailwindcss/postcss at ^4.0.0 and          tailwindcss at ^4.1.17).        - Updated Ritual_React/apps/hub/package.json to use ^4 for both packages, aligning it with the working          configuration in core_projects/clearline.        - Ran pnpm install and pnpm update to synchronize the versions.
   2. Fixed Missing Types:
       - Added @types/react and @types/react-dom to Ritual_React/packages/ritual-ui/package.json to resolve
         "Could not find a declaration file for module 'react'" errors during the build.

   3. Resolved TypeScript Errors in `RitualCycleTracker.tsx`:
       - Added explicit type annotations to function parameters (seconds: number, value: string).
       - Correctly typed useRef with HTMLTextAreaElement.
       - Defined a CompletedSession interface and typed the completedSessions state.
       - Added typing for the interval variable (NodeJS.Timeout).
       - Fixed type-safety issues when indexing sessionData with currentPhase.id by adding keyof typeof

--- a/packages/ritual-ui/package.json
+++ b/packages/ritual-ui/package.json
@@ -5,5 +5,9 @@
   "dependencies": {
     "@gttm/ritual-brand": "workspace:*",
     "react": "^18.0.0"
+  },
+  "devDependencies": {
+    "@types/react": "^18",
+    "@types/react-dom": "^18"
   }
 }
