--- a/apps/hub/tsconfig.json
+++ b/apps/hub/tsconfig.json
@@ -19,7 +19,9 @@
       }
     ],
     "paths": {
-      "@/*": ["./src/*"]
+      "@/*": ["./src/*"],
+      "ritual-brand": ["../../packages/ritual-brand/src"],
+      "ritual-ui": ["../../packages/ritual-ui/src"]
     }
   },
   "include": ["next-env.d.ts", "**/*.ts", "**/*.tsx", ".next/types/**/*.ts"],
