--- a/packages/ritual-brand/tsconfig.json
+++ b/packages/ritual-brand/tsconfig.json
@@ -1,10 +1,13 @@
 {
   "compilerOptions": {
-    "module": "commonjs",
-    "target": "es6",
-    "resolveJsonModule": true,
+    "target": "ES6",
+    "module": "CommonJS",
+    "outDir": "dist",
+    "strict": true,
     "esModuleInterop": true,
-    "outDir": "dist"
+    "resolveJsonModule": true,
+    "moduleResolution": "node",
+    "skipLibCheck": true
   },
   "include": ["src/**/*"]
 }
