--- a/packages/ritual-ui/package.json
+++ b/packages/ritual-ui/package.json
@@ -1,13 +1,28 @@
 {
   "name": "@gttm/ritual-ui",
-  "version": "0.0.1",
-  "main": "src/index.ts",
-  "dependencies": {
-    "@gttm/ritual-brand": "workspace:*",
-    "react": "^18.0.0"
+  "version": "0.0.2",
+  "main": "dist/index.js",
+  "types": "dist/index.d.ts",
+  "scripts": {
+    "build": "tsc && pnpm build:ui",
+    "build:clean": "rm -rf dist && mkdir dist",
+    "build:ui": "bun run scripts/build-ui.ts"
   },
+  "exports": {
+    ".": {
+      "import": "./dist/index.js",
+      "require": "./dist/index.js",
+      "types": "./dist/index.d.ts"
+    },
+    "./styles.css": "./dist/styles.css"
+  },
+  "files": [
+    "dist"
+  ],
   "devDependencies": {
-    "@types/react": "^18",
-    "@types/react-dom": "^18"
+    "@types/react": "^18.3.0",
+    "@types/react-dom": "^18.3.0",
+    "@types/node": "^20.19.25",
+    "typescript": "^5.0.0"
   }
 }
