--- a/packages/ritual-ui/package.json
+++ b/packages/ritual-ui/package.json
@@ -20,9 +20,12 @@
     "dist"
   ],
   "devDependencies": {
+    "@types/node": "^20.19.25",
     "@types/react": "^18.3.0",
     "@types/react-dom": "^18.3.0",
-    "@types/node": "^20.19.25",
     "typescript": "^5.0.0"
+  },
+  "dependencies": {
+    "lucide-react": "^0.556.0"
   }
 }
