--- a/packages/ritual-brand/package.json
+++ b/packages/ritual-brand/package.json
@@ -7,7 +7,8 @@
   "scripts": {
     "build": "pnpm build:clean && tsc && pnpm build:theme",
     "build:clean": "rm -rf dist && mkdir dist",
-    "build:theme": "bun run scripts/build-theme.ts"
+    "build:theme": "bun run scripts/build-theme.ts",
+    "tokens:lint": "bun run scripts/lint-tokens.ts"
   },
 
   "exports": {
